# multi-agent-system

./: .bandit  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_STATUS.md  CONSTITUTION.md  CONTRIBUTING.md  Dockerfile  FIRST_RUN_GUIDE.md  LANDING_PAGE_PLAN.md  LICENSE  PRESS_KIT.md  PROJECT_HEALTH.md  PUBLIC_BETA_REPORT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  bandit-report.json  beta3_report.md  beta_release_checklist.md  ci_fix_report.md  codeorbit.py  config.py  create_check_file.py  docker-compose.yml  documentation_audit.md  main.py  pyproject.toml  repository_health_beta3.md  repository_professionalization_report.md  requirements.txt  sprint4_test_e63d2314.txt  test.py  test_temp.db
.github/: PULL_REQUEST_TEMPLATE.md
agents/: __init__.py  architect.py  base_agent.py  developer.py  manager.py  planner.py  product_builder.py  repository_engineer.py  researcher.py  reviewer.py  tech_lead.py  tool_agent.py  writer.py
api/: admin_routes.py  app.py  auth_routes.py  hospital_routes.py  models.py  notification_routes.py  routes.py  webhooks.py
core/: cache.py  cleanup.py  database.py  di.py  di_setup.py  llm.py  logging.py  memory.py  metrics.py  notifications.py  queue.py  registry.py  repositories.py  schemas.py  telemetry.py  worker.py  workflow.py
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.js
data/: api_test_1782410079.json  api_test_1782410939.json  api_test_session.json  cli_session.json  learning.db  metrics_history.json  system.db  system.db-shm  system.db-wal
demo/: demo_cli.md  demo_consensus.md  demo_dashboard.md  demo_memory.md  demo_self_healing.md
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  BENCHMARK_SUITE.md  CAPABILITY_ROADMAP.md  CLIENT_PRESENTATION.md  DEMO_SCRIPT.md  PORTFOLIO_CASE_STUDY.md  RESUME_SUMMARY.md  (+3 more)
(+306 files in other folders)
