[project]
name = "codeorbit-ai"
version = "0.1.0"
description = "CodeOrbit AI Multi-Agent System Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0",
    "google-genai>=2.10.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "pyjwt>=2.8.0",
    "psutil>=5.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.17.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "stripe>=7.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | node_modules
  | dashboard/node_modules
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "dashboard/node_modules",
    "build",
    "dist"
]

[tool.ruff.lint]
ignore = [
    "F401", # Unused imports
    "F841", # Unused local variables
    "E402", # Module level import not at top of file
    "F821", # Undefined name
    "F811", # Redefinition of unused import
    "F541", # f-string without any placeholders
]

[tool.bandit]
skips = ["B613"]
exclude_dirs = [".venv", "venv", "brain", "dist", "build", "node_modules", "dashboard"]

